--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
+    "mongoose-paginate-v2": "^1.6.3",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
