user registration email send done

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
     "mongoose-paginate-v2": "^1.6.3",
+    "nodemailer": "^6.7.3",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
