--- a/config.env
+++ b/config.env
@@ -1,4 +1,14 @@
 RUNNING_PORT=5000
+
 MONGOOSE_DB_URI=mongodb://127.0.0.1:27017/Mern_Boiler_Project
 MONGOOSE_DB_USER=
 MONGOOSE_DB_PASS=
+
+
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=0331223590413c
+SMTP_PASSWORD=161eed60f55d67
+SMTP_FROM_EMAIL=rkamruzzaman@gmail.com
+SMTP_FROM_NAME=ripon
+
