--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
     "mongoose-paginate-v2": "^1.6.3",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
     "xss-clean": "^0.1.1"
   },
